[package]
name = "book_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockfrost = "0.2.0"
tokio = { version = "1",  features = ["macros", "rt-multi-thread"] } 
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"